--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,8 @@ body {
 	margin: 0;
 	padding: 0;
 
+	color: var(--black);
+
 	font-family:
 		-apple-system,
 		BlinkMacSystemFont,
@@ -25,4 +27,14 @@ a {
 
 * {
 	box-sizing: border-box;
+}
+
+:root {
+	--black: #3B434E;
+	--white: white;
+	--primary: #7653FC;
+	--red: #FC836D;
+	--green: #1DC37E;
+	--green-light: #C8F8E4;
+	font-family: "Noto Sans", sans-serif;
 }
