feat (ud-ui): finish creating of rating component

--- a/src/modules/ud-ui/Rating/Rating.module.css
+++ b/src/modules/ud-ui/Rating/Rating.module.css
@@ -1,7 +1,17 @@
+.starsContainer {
+	display: flex;
+	gap: 5px;
+}
+
 .star {
 
 }
 
-.filled {
+.filled svg {
 	fill: var(--primary);
+}
+
+.editable svg {
+	cursor: pointer;
+	transition: all 0.2s;
 }
