--- a/src/modules/layout/Footer/Footer.module.css
+++ b/src/modules/layout/Footer/Footer.module.css
@@ -1,3 +1,35 @@
 .footer {
+	display: grid;
+	grid-template-columns: 1fr auto auto;
+	gap: 40px;
 
+	padding: 27px;
+
+	background-color: var(--primary);
+}
+
+.text {
+	margin: 0;
+
+	/* identical to box height */
+
+	color: #FFF;
+
+	font-family: var(--font);
+	font-size: 16px;
+	font-weight: 500;
+	font-style: normal;
+}
+
+@media (max-width: 765px) {
+	.footer {
+		grid-template-columns: 1fr;
+		gap: 0;
+
+		padding: 24px;
+	}
+
+	.text {
+		line-height: 25px;
+	}
 }
