--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,6 +38,7 @@ a {
 	--green: #1DC37E;
 	--green-light: #C8F8E4;
 	--grey-light: #EBEBEB;
+	--font: "Noto Sans", sans-serif;
 
 	font-family: "Noto Sans", sans-serif;
 }
